test/rules/single_criterion/run_as_root/not_allow_run_as_root/config.json
{
  "description": "Test single criteria rule (not allow run as root)",
  "runKwctl": true,
  "testWorkspace": "../fixtures/",
  "pass": [
    "deployments/normal.yaml",
    "cronjobs/normal.yaml",
    "pods/normal.yaml"
  ],
  "deny": [
    "cronjobs/run_as_root.yaml",
    "deployments/run_as_root.yaml",
    "pods/run_as_root.yaml"
  ]
}
